installed devise, add a user, and install devise views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,14 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<div class="container">	
+		<!-- added as part of devise installation -->
+		<p class="notice"><%= notice %></p> 
+    	<p class="alert"><%= alert %></p>
+
 		<%= yield %>
 	</div>
+
 
 </body>
 </html>
