Updated frontend for the new authentication system
added simple_form
updated several forms to bootstrap/simple_form
added login/logout/register/profile links to nav
added a collection select to our status form

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -7,7 +7,14 @@
 <% @statuses.each do |status| %>
 
   <div class = "status">
-    <strong><%= status.name %></strong>
+    <strong>
+      <% if !status.user.nil? %>
+        <%= status.user.full_name %>
+      <% else %>
+        status.user is nil!
+      <% end %> 
+    </strong>
+
     <p><%= status.content %></p>
 
     <div class="meta">
