--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,25 +1,46 @@
-<%= form_for(@status) do |f| %>
-  <% if @status.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
+<!--
+ <%= form_for(@status) do |f| %>
+   <% if @status.errors.any? %>
+     <div id="error_explanation">
+       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
 
-      <ul>
-      <% @status.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+       <ul>
+       <% @status.errors.full_messages.each do |msg| %>
+         <li><%= msg %></li>
+       <% end %>
+       </ul>
+     </div>
+   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+   <div class="field">
+     <%= f.label :content %><br>
+     <%= f.text_area :content %>
+   </div>
+   <div class="actions">
+     <%= f.submit %>
+   </div>
+ <% end %>
+-->
+
+<!-- Notes to self: formatting changes using simple_form did did not all have an impact due to incompatibility with Bootstrap 3... need to go through BS3 API to replace with appropriate classes if we want the form to look purty. Or we just revert to default Ruby form and apply Bootstrap ourselves? -->
+ <%= simple_form_for(@status, html: {class: "form-horizontal"}) do |f| %>
+   <% if @status.errors.any? %>
+     <div id="error_explanation">
+       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
+
+       <ul>
+       <% @status.errors.full_messages.each do |msg| %>
+         <li><%= msg %></li>
+       <% end %>
+       </ul>
+     </div>
+   <% end %>
+
+   <%= f.input :user_id, collection: User.all, label_method: :full_name %>
+
+   <%= f.input :content %>
+
+   <div class="form-actions">
+     <%= f.button :submit %>
+   </div>
+ <% end %>
